--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@antfu/ni": "^0.23.0",
+		"@iconify-json/line-md": "^1.2.2",
 		"@iconify-json/material-symbols": "^1.2.4",
 		"@iconify-json/uis": "^1.2.1",
 		"@ryoppippi/eslint-config": "npm:@jsr/ryoppippi__eslint-config@^0.0.24",
