--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
 		"@iconify-json/material-symbols": "^1.2.4",
 		"@ryoppippi/eslint-config": "npm:@jsr/ryoppippi__eslint-config@^0.0.24",
 		"@ryoppippi/unocss-preset": "npm:@jsr/ryoppippi__unocss-preset@^1.0.3",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.2.5",
 		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/kit": "^2.7.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@unocss/extractor-svelte": "^0.63.4",
 		"@unocss/preset-attributify": "^0.63.4",
 		"@unocss/reset": "^0.63.4",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.45.1",
 		"lucide-svelte": "^0.453.0",
 		"std-env": "^3.7.0",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.5",
 		"type-fest": "^4.26.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.6.3",
 		"unocss": "^0.63.4",
 		"unocss-preset-animations": "^1.1.0",
 		"unocss-preset-daisy": "^7.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.4.9"
 	}
 }
